<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/layout_with_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2823C1"
            android:orientation="vertical"            >

            <TextView
                android:id="@+id/insert_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/insert_your_pin_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textAutoComplete"
                android:text="@string/your_pin_editText"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_with_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_with_text"
            android:background="#2823C1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/generate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/generate_button"
                app:backgroundTint="#B32A61" />

            <Button
                android:id="@+id/crack_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/crack_button"
                app:backgroundTint="#B32A61" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_with_PIN"
            android:layout_below="@id/layout_with_buttons"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/pin_text"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_with_buttons_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_with_PIN"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/save_button"
                app:backgroundTint="#B32A61" />

            <Button
                android:id="@+id/copy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/copy_to_button"
                app:backgroundTint="#B32A61" />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>